k8s-235/apps/unifi-controller/overlays/prod/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unifi
  labels:
    prometheus: k8s
